# T3SBP-Assignment

./: .coverage  README.MD  pyproject.toml  requirements.txt  setup.py
ScoreStreamPy/: BoardManager.py  Match.py  ScoreBoard.py  __init__.py
ScoreStreamPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: .coverage  Experimental.py  TestBoard.py  TestBoardLogic.py  TestBoardManagerLogic.py  TestBoardThreadSafety.py  TestManagerBoardLogic.py  TestMatchClass.py  TestMatchLogic.py  conftests.py  test_Board_Logic.py  test_Board_Manager_Logic.py  test_Board_Manager_TreadSafety.py  test_Board_Thread_Safety.py  test_Match_Logic.py
